[package]
name = "horrible-katex-hack"
description = "A way of using KaTeX with rustdoc by abusing the doc(html_favicon_url) attribute."
version = "0.1.3"
authors = ["Mara Bos <m-ou.se@m-ou.se>"]
license = "BSD-2-Clause"
repository = "https://github.com/m-ou-se/rust-horrible-katex-hack"
keywords = ["katex", "latex"]
edition = "2018"

[dependencies]
